# -

./: README.md
astar_planner/: CMakeLists.txt  README.md  package.xml
astar_planner/include/astarPlanner/: astar_searcher.h  bezier_curve_path.h  cubic_spline_interpolator.h  node.h
astar_planner/launch/: astar_planner.launch
astar_planner/src/: astar_searcher.cpp  bezier_curve_path.cpp  cubic_spline_interpolator.cpp  demo_node.cpp  my_odom_publisher.cpp
bspline/: CMakeLists.txt
bspline/include/bspline/: non_uniform_bspline.h
bspline/src/: non_uniform_bspline.cpp
hybrid_astar_dubins_opt_mpc/: CMakeLists.txt  package.xml
hybrid_astar_dubins_opt_mpc/bags/: 2024-05-24-12-51-46.bag  2024-05-24-14-37-53.bag  2024-05-29-15-44-44.bag  2024-05-29-16-27-02.bag  2024-05-29-16-53-39.bag  2024-05-29-17-04-24.bag  2024-05-29-19-50-19.bag  readme.txt
hybrid_astar_dubins_opt_mpc/include/: astar_NMPC_CBF.h  half_struct_planner.h  hybrid_astar_Bspline_LMPC.h  hybrid_astar_Bspline_NMPC.h  hybrid_astar_dubins_opt.h  hybrid_astar_mpc.h  mpc_bridge.h  simple_astar_test.h
hybrid_astar_dubins_opt_mpc/launch/: inspection.launch  mbf_lmpc.launch  mbf_mpc_cbf.launch  mbf_mpc_quadratic_form.launch  mbf_nmpc.launch  simple_astar.launch
hybrid_astar_dubins_opt_mpc/map/: henhouse.pgm  henhouse.yaml  henhouse1.pgm  henhouse_.pgm  henhouse（复件）.pgm  henhouse（复件）（复件）（复件）.pgm  inspection_map.pgm  inspection_map.yaml  inspection_map_1.pgm  inspection_map_1.yaml
hybrid_astar_dubins_opt_mpc/msg/: fusion_analysis.msg  mpc_arg.msg
hybrid_astar_dubins_opt_mpc/node/: astar_NMPC_CBF_node.cpp  hybrid_astar_Bspline_LMPC_node.cpp  hybrid_astar_Bspline_NMPC_node.cpp  hybrid_astar_dubins_opt_node.cpp  hybrid_astar_mpc_node.cpp  mpc_bridge_node.cpp  simple_astar_test_node.cpp
hybrid_astar_dubins_opt_mpc/param/: costmap_converter_params.yaml  costmap_params.yaml  move_base_flex_params.yaml  mpc_local_planner_params_mintime_via_points.yaml  mpc_local_planner_params_quadratic_form.yaml  teb_local_planner_params_mbf.yaml
hybrid_astar_dubins_opt_mpc/path/: path_2024-02-06 21_20_25  path_2024-02-16 20_04_07  path_2024-04-17 20_32_13
hybrid_astar_dubins_opt_mpc/rviz/: cbf.rviz  inspection_map.rviz  inspection_map_mpc.rviz  nmpc.rviz
hybrid_astar_dubins_opt_mpc/src/: astar_NMPC_CBF.cpp  half_struct_planner.cpp  hybrid_astar_Bspline_LMPC.cpp  hybrid_astar_Bspline_NMPC.cpp  hybrid_astar_dubins_opt.cpp  hybrid_astar_mpc.cpp  mpc_bridge.cpp  simple_astar_test.cpp
hybrid_astar_dubins_opt_mpc/srv/: chibot_task.srv
hybrid_astar_dubins_opt_mpc/topology_map/: inspection_traffic_route_1  inspection_traffic_route_2  inspection_traffic_route_3
hybrid_astar_dubins_opt_mpc/topology_path/: path_2024-02-06 21_35_57  path_2024-02-16 20_24_25  path_2024-04-18 21_37_21
hybrid_astar_searcher/: CMakeLists.txt
hybrid_astar_searcher/include/hybrid_astar_searcher/: Dijkstra.h  Graph.h  calculate_heuristic.h  collisiondetection.h  constants.h  dubins.h  dynamic_hybrid_astar.h  dynamicvoronoi.h  hybrid_astar.h  lbfgs.hpp  lookup.h  node3d.h  path_adjust.h  smooth.h  type_defs.h  visualize.h
hybrid_astar_searcher/src/: ReedsSheppPath.cpp  calculate_heuristic.cpp  collisiondetection.cpp  dubins.cpp  dynamic_hybrid_astar.cpp  dynamicvoronoi.cpp  hybrid_astar.cpp  smooth.cpp  test.cpp
mpc_controller/: CMakeLists.txt
mpc_controller/app/: mpc_control_test.cpp
mpc_controller/include/: uniform_bspline.h
mpc_controller/src/: MPC.cpp  uniform_bspline.cpp
mpc_dcbf/launch/: mpc_dcbf.launch  mpc_dcbf_soft.launch
mpc_dcbf/scripts/: controller.py  mpc_acbf.py  mpc_dcbf.py  mpc_dcbf_soft.py
mpc_dcbf/src/: global_path_by_rviz.cpp  global_path_publisher.cpp
mpc_local_planner/mpc_local_planner/cfg/: rviz_test_mpc_optim.rviz
mpc_local_planner/mpc_local_planner/src/: controller.cpp  mpc_local_planner_ros.cpp  test_mpc_optim_node.cpp
mpc_tracking/: CMakeLists.txt  package.xml
mpc_tracking/src/: mpc.cpp
publish_data/: CMakeLists.txt  package.xml
publish_data/src/: publish_data.cpp
simu/: CMakeLists.txt  package.xml
simu/bags/: 2023-11-16-17-29-52.bag  readme.txt
simu/config/: joint_names_chibot_description.yaml
simu/include/: chibot_bridge.h
simu/launch/: complex_world.launch  display.launch  empty_world.launch  gazebo.launch  henhouse_world.launch  henhouse_world_obs.launch  simple_world.launch
simu/meshes/: back_lidar_link.STL  camera_link.STL  front_lidar_link.STL  lb_caster_link.STL  lb_caster_link_.STL  left_wheel_link.STL  lf_caster_link.STL  lf_caster_link_.STL  rb_caster_link.STL  rb_caster_link_.STL  rf_caster_link.STL  rf_caster_link_.STL  right_wheel_link.STL
simu/models/Blackwall/: model.config  model.sdf
simu/models/Greywall/: model.config  model.sdf
simu/models/complex/: model.sdf
simu/models/complex_wall/: model.config  model.sdf
simu/models/whitewall/: model.config  model.sdf
simu/msg/: chibot_pose.msg  fusion_analysis.msg
simu/node/: chibot_bridge_node.cpp
simu/rviz/: henhouse_world.rviz  simple_world.rviz
simu/src/: chibot_bridge.cpp
simu/urdf/: chibot.gazebo.xacro  chibot_description.csv  chibot_description.urdf  chibot_model.urdf.xacro  common_properties.xacro
simu/worlds/: complex.world  henhouse.world  henhouse_nocage.world  henhouse_obs.world
slam/: CMakeLists.txt  package.xml
slam/bag/: rosbagfilter.txt
slam/include/: gen_esdfmap.h
slam/launch/: localization.launch  localization_complex.launch  map_saver.launch  mapping.launch
slam/launch/include/: algorithm_gmapping.launch  amcl_diff.launch  carto.launch  laser_double.launch
slam/map/: complex.pgm  complex.yaml  henhouse.pgm  henhouse.yaml
slam/node/: relocation.cpp  rotate_map.cpp
slam/param/: chibot_carto_2d.lua  gmapping_params.yaml
slam/rviz/: slam.rviz
slam/src/: gen_esdfmap.cpp  laser_double.cpp
swarm_test/: CMakeLists.txt
swarm_test/launch/: acbf_planning.launch  cbf_planning.launch  cbf_soft_planning.launch  start_test.launch
swarm_test/src/: data_processor.cpp  odom_traj_visualization.cpp
traj_planner/: CMakeLists.txt
traj_planner/src/: obs_manager_node.cpp
(+14 files in other folders)
