<package format="2">
  <name>chibot_slam</name>
  <version>1.0.0</version>
  <description>
    <p>Slam package for chibot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
</package>
